244Initials/force-app/main/default/objects/Order/fields/ARTL_AnnualRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>ARTL_AnnualRecurringTotal__c</fullName>
    <label>Annual Recurring Total</label>
    <summarizedField>OrderItem.Annual_Recurring_Total__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>