244Initials/force-app/main/default/objects/Order/fields/ARTL_EffectiveAnnualRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>ARTL_EffectiveAnnualRecurringTotal__c</fullName>
    <label>Effective Annual Recurring Total</label>
    <summarizedField>OrderItem.Annual_Recurring_Total__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>