244Initials/force-app/main/default/objects/Order/listViews/EnterpriseOrders.listView-meta.xml
<ListView>
    <fullName>EnterpriseOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.%vlocity_namespace%__EnterpriseOrder</value>
    </filters>
    <label>Enterprise Orders</label>
</ListView>